# MedVigil

./: .gitignore  PRD.md  main.py  pyproject.toml
api/routers/: notes.py
brain/: README.md  requirements.txt
brain/data/: ade_processed.csv
brain/scripts/: inference.py  prepare_data.py  rag.py  train_ner.py
core/: database.py
issues/: 01-submit-parse-clinical-note.md  02-deidentify-phi.md  03-rag-literature-search.md  04-causality-score.md  05-local-trend-alert.md  06-generate-clinical-brief.md
models/: note.py
tests/: test_api.py
