[project]
name = "medvigil"
version = "0.1.0"
description = "Clinical NER for pharmacovigilance"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "accelerate>=0.30.0",
    "datasets>=2.19.0",
    "evaluate>=0.4.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pytest>=8.0.0",
    "scikit-learn>=1.4.0",
    "seqeval>=1.2.2",
    "sqlmodel>=0.0.16",
    "tokenizers>=0.15.0",
    "tqdm>=4.66.0",
    "transformers>=4.40.0",
    "uvicorn>=0.29.0",
]